[gd_scene load_steps=98 format=2]

[ext_resource path="res://art/Sprites_NPC/blipcolor.png" type="Texture" id=1]
[ext_resource path="res://Enemy/pluskw.gd" type="Script" id=2]
[ext_resource path="res://art/Effect/Piksel.png" type="Texture" id=3]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 240, 240 )

[sub_resource type="SpriteFrames" id=72]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walk_E",
"speed": 7.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "walk_S",
"speed": 7.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "walk_W",
"speed": 7.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "attack_S",
"speed": 7.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "idle_S",
"speed": 1.5
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "walk_N",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "attack_W",
"speed": 7.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "attack_N",
"speed": 5.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "enemyHit",
"speed": 7.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "attack_E",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=73]
extents = Vector2( 37.2279, 14.9437 )

[sub_resource type="Animation" id=74]
length = 0.7

[sub_resource type="Animation" id=75]
length = 0.8
loop = true
step = 0.05

[sub_resource type="Animation" id=76]
length = 0.8
loop = true
step = 0.05

[sub_resource type="Animation" id=77]
length = 0.8
loop = true
step = 0.05

[sub_resource type="Animation" id=78]
length = 0.8
loop = true
step = 0.05

[sub_resource type="Animation" id=79]

[sub_resource type="Animation" id=80]
length = 0.7
loop = true

[sub_resource type="Animation" id=81]
length = 0.4
loop = true

[sub_resource type="Animation" id=82]

[sub_resource type="Animation" id=83]

[sub_resource type="Animation" id=84]

[sub_resource type="Animation" id=85]

[sub_resource type="Animation" id=86]
length = 0.7
loop = true

[sub_resource type="Animation" id=87]
length = 0.7
loop = true

[sub_resource type="Animation" id=88]
length = 0.7
loop = true

[sub_resource type="Animation" id=89]
length = 0.7
loop = true

[sub_resource type="CircleShape2D" id=90]
radius = 609.658

[sub_resource type="CapsuleShape2D" id=91]
radius = 57.025
height = 50.3062

[sub_resource type="CapsuleShape2D" id=92]
radius = 49.2882
height = 62.4118

[sub_resource type="StyleBoxFlat" id=93]
bg_color = Color( 0.878431, 0.0666667, 0.0666667, 1 )

[sub_resource type="StyleBoxFlat" id=94]
bg_color = Color( 0.54902, 0.419608, 0.419608, 0 )
border_color = Color( 0.462745, 0.721569, 0.572549, 1 )
corner_detail = 10

[node name="blip" type="KinematicBody2D" groups=[
"Enemies",
]]
light_mask = 4
position = Vector2( 1.31021, 0.647812 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( -5.4854, 12.5196 )
rotation = 0.00500034
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 72 )
animation = "attack_E"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.41599, 53.7521 )
shape = SubResource( 73 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 74 )
anims/attack_E = SubResource( 75 )
anims/attack_N = SubResource( 76 )
anims/attack_S = SubResource( 77 )
anims/attack_W = SubResource( 78 )
anims/die = SubResource( 79 )
anims/enemy = SubResource( 80 )
anims/hit = SubResource( 81 )
anims/idle_E = SubResource( 82 )
anims/idle_N = SubResource( 83 )
anims/idle_S = SubResource( 84 )
anims/idle_W = SubResource( 85 )
anims/walk_E = SubResource( 86 )
anims/walk_N = SubResource( 87 )
anims/walk_S = SubResource( 88 )
anims/walk_W = SubResource( 89 )

[node name="Sight" type="Area2D" parent="."]
position = Vector2( 7.23442, -61.7008 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
visible = false
position = Vector2( -0.84082, 3.36359 )
shape = SubResource( 90 )

[node name="TurnAxis" type="Position2D" parent="."]
position = Vector2( 7.23444, -61.7008 )
rotation = -4.42092

[node name="CastPoint" type="Position2D" parent="TurnAxis"]
position = Vector2( 85, 0 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 49.6129, 5.04538 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -56.0145, 48.1881 )
rotation = -1.5521
shape = SubResource( 91 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 49.6129, 5.04538 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
visible = false
position = Vector2( -54.9459, 47.7119 )
rotation = -1.57074
shape = SubResource( 92 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -42.7761
margin_top = -80.7929
margin_right = 16.2239
margin_bottom = -73.7929
custom_styles/fg = SubResource( 93 )
custom_styles/bg = SubResource( 94 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="CPUParticles2D" parent="."]
modulate = Color( 0, 0.105882, 0.0666667, 1 )
scale = Vector2( 0.3, 0.3 )
emitting = false
lifetime = 5.0
one_shot = true
speed_scale = 4.07
explosiveness = 0.26
texture = ExtResource( 3 )
gravity = Vector2( 0, -70 )
orbit_velocity_random = 1.0
linear_accel = 20.8
radial_accel = 17.71
tangential_accel = -3.2
angle = -18.6
angle_random = 0.33
scale_amount = 0.3
scale_amount_random = 1.0
[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
